@@ -1,5 +1,10 @@
 2006-02-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/tie-formatting-problem.cc (from_lv_ties): add heads for
+	common refpoint.
+
+	* flower/include/std-vector.hh (iterof): add iterof macro.
+
 	* lily/enclosing-bracket.cc (width): new function.
 
 	* lily/align-interface.cc (align_elements_to_extents): reinstate
